force-app/main/default/objects/Square_Config__mdt/Square_Config__mdt.object-meta.xml
<CustomObject>
    <label>Square Config</label>
    <pluralLabel>Square Configs</pluralLabel>
</CustomObject>