force-app/main/default/objects/Square_Config__mdt/fields/CustomerCreationURL__c.field-meta.xml
<CustomField>
    <fullName>CustomerCreationURL__c</fullName>
    <label>CustomerCreationURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>