force-app/main/default/objects/Square_Config__mdt/fields/PaymentCreationURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentCreationURL__c</fullName>
    <label>PaymentCreationURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>