force-app/main/default/objects/Square_Config__mdt/fields/Token_Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration_Time__c</fullName>
    <label>Token Expiration Time</label>
    <type>DateTime</type>
</CustomField>